--- a/todo
+++ b/todo
@@ -2,11 +2,19 @@
 
 -Particles when firing gun
 -Reposition bullets when gun fires
+
 -Explosion for beefeye
--Make worms follow player and spawn on some phases
+
+x-Make worms follow player and spawn on some phases
+
 -Worm attack
 -Beefeye attack
+
 -Player death
+
 -Menu
+
 -Item pickup screen thing
 -Item description
+
+-Rewrite pathfinding to be smoother between nodes
