--- a/todo
+++ b/todo
@@ -1,11 +1,10 @@
-
+ACTIVE:
 
 -Particles when firing gun
 -Reposition bullets when gun fires
 
 -Explosion for beefeye
 
-X-Make worms follow player and spawn on some phases
 
 -Worm attack
 -Beefeye attack
@@ -25,7 +24,6 @@ X-Make worms follow player and spawn on some phases
 
 -Fix bug with pathfinding where path processes lock when no path can be made (timer for completion?)
 
-X-Bullet range
 
 -Make gibs in a global gibs list, same with blood
 --When gibs are done being emitted, delete gibhandler and blood emitter
@@ -33,3 +31,9 @@ X-Bullet range
 
 -Knockback on enemies!
 -Temporary attack animations for enemies and design attacks
+
+
+FINISHED:
+
+X-Bullet range
+X-Make worms follow player and spawn on some phases
