Added new stuff to todo and deleted binary

--- a/todo
+++ b/todo
@@ -4,8 +4,6 @@ ACTIVE:
 -Reposition bullets when gun fires
 
 -Explosion for beefeye
-
-
 -Worm attack
 -Beefeye attack
 
@@ -15,15 +13,11 @@ ACTIVE:
 
 -Item pickup screen thing?
 -Item description
--Item API Timers
 
 -Rewrite pathfinding to be smoother between nodes
 -Pathfinding bug with the top wall
 -Phases x and y are flipped?
 -Phase bug [in discord]
-
--Fix bug with pathfinding where path processes lock when no path can be made (timer for completion?)
-
 
 -Make gibs in a global gibs list, same with blood
 --When gibs are done being emitted, delete gibhandler and blood emitter
@@ -31,6 +25,15 @@ ACTIVE:
 
 -Knockback on enemies!
 -Temporary attack animations for enemies and design attacks
+
+-Get rid of big tiles?
+-- They're kinda useless and just make certain things more difficult
+
+
+WORKING ON:
+
+-Item API Timers
+-Fix bug with pathfinding where path processes lock when no path can be made (timer for completion?)
 
 
 FINISHED:
